# vocab-tools

./: .gitignore  LICENSE  README.md  dump.py  pyproject.toml
sparql/: skos-concepts.sparql
